--- a/Home/templates/pages/home.html
+++ b/Home/templates/pages/home.html
@@ -1,9 +1,9 @@
 {% extends "pages/base.html" %}
 
 {% block title %}
-Trang Chủ
+The Gioi Manga
 {% endblock  %}
 
 {% block content %}
-   <H3> Webcome To The World </H3>
+<h2></h2>
 {% endblock  %}
