--- a/Home/templates/pages/login.html
+++ b/Home/templates/pages/login.html
@@ -7,10 +7,8 @@
     <title>Đăng Nhập</title>
     <link rel="stylesheet" type="text/css" href="{% static 'webcss/login.css'%}">
 
-    <style>
-
-    </style>
 </head>
+<button class = "backhome"type="back"></i> <a href="/#"> Quay lại trang chủ<a></button>
 <body>
 <center>
     <div class = "login">
