--- a/Home/templates/pages/register.html
+++ b/Home/templates/pages/register.html
@@ -8,6 +8,7 @@
     <title>Đăng kí tài khoản</title>
 </head>
 <body>
+<button class = "backhome"type="back"></i> <a href="/#"> Quay lại trang chủ<a></button>
     <center>
         <div class=register>
         <form action='.' method='POST'>
@@ -15,7 +16,7 @@
             {% csrf_token %}
             {{form.as_p}}
             <input id = "submit" type ="submit" value="Đăng kí"/>
-        </form>   
+        </form>
             <a href="/login"> Trở lại trang đăng nhập </a>
 
         </div> 
